--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,17 +10,17 @@ layout: default
 <div class="container-fluid">
     <div class="row" style="padding-top: 20px;">
         <div class="col-xl-3 col-0">
-	    {% if page.index != false %}
-	        {% include sidebar.html %}
-            {% endif %}
-	</div>
+          {% if page.index != false %}
+              {% include sidebar.html %}
+                {% endif %}
+	      </div>
 
-	<div class="col-xl-6 col-lg-8 col-12 offset-lg-2 offset-0">
-            <h1>{{ page.title }}</h1>
-	</div>
+	    <div class="col-xl-6">
+          <h1>{{ page.title }}</h1>
+	    </div>
     </div>
 
     <div class="row" id="content-row">
-	<div class="col-xl-6 col-lg-8 col-12 offset-xl-3 offset-lg-2 offset-0">{{ content }}</div>
+	    <div class="col-xl-6 col-lg-8 col-12 offset-xl-3 offset-lg-2 offset-0">{{ content }}</div>
     </div>
 </div>
