Fixed header link

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -2,7 +2,7 @@
   <div class="row" markdown="1">
     <div class="col">
       <nav class="navbar navbar-expand-md bg-light navbar-light py-2">
-	<a class="navbar-brand" href="/" style="font-size: 1.7em; padding-left: 30px;">Algorithmics</a>
+	<a class="navbar-brand" href="/Algorithmics/" style="font-size: 1.7em; padding-left: 30px;">Algorithmics</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
