--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
     src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160601102-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -46,7 +46,7 @@
     gtag('js', new Date());
   
     gtag('config', 'UA-160601102-1');
-  </script>
+  </script> -->
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap');
