--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,9 +60,29 @@
     }
     h1, h2, h3, h4, h5 {
         font-family: 'Roboto', sans-serif;
-	font-weight:700;
+        font-weight:700;
         color: rgb(5, 5, 5);
+        margin: 0px;
+      }
+    h1 {
+      margin-top: 3rem;
+      margin-bottom: 1.5rem;
+      font-size: 3rem;
     }
+    h2 {
+      margin-top: 3rem;
+      margin-bottom: 1.5rem;
+      font-size: 2.5rem;
+    }
+    h3 {
+      margin-top: 1.5rem;
+      margin-bottom: 1rem;
+      font-size: 2rem;
+    }
+    h4 {
+      margin-top: 0.75rem;
+      margin-bottom: 0.5rem;
+      }
     .annotation p {
         font-family: 'Roboto', sans-serif;
 	font-weight: 400;
