--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,5 @@
   <meta name="theme-color" content="#157878">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href="{{ site.baseurl }}/css/syntax.css" rel="stylesheet">
 </head>
