--- a/css/normalize.css
+++ b/css/normalize.css
@@ -6,7 +6,7 @@
  *    user zoom.
  */
 
-html {
+ html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -132,10 +132,11 @@ dfn {
  * contexts in Firefox 4+, Safari, and Chrome.
  */
 
-h1 {
+/*h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
+*/
 
 /**
  * Address styling not present in IE 8/9.
